Added the ability to customize the visual of main window throw ColorsInfo class.
Refactored MainWindow.xaml, added ability to change background image.

--- a/GenLauncherNet/App.xaml
+++ b/GenLauncherNet/App.xaml
@@ -4,5 +4,8 @@
              xmlns:local="clr-namespace:GenLauncherNet"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
+        <ResourceDictionary>
+        
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
